--- a/server/static/index.html
+++ b/server/static/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main class="container">
-        <h1>XG「你画我猜」v1.0</h1>
+        <h1>信管XG[你画我猜]v1.0</h1>
         <div class="row">
             <div style="float: left;width: 100%;">
                 <div style="margin-left:10px;margin-right: 400px;">
@@ -75,7 +75,6 @@
                                             <td><strong></strong></td>
                                             <td><em></em></td>
                                         </tr>
-                                        <!--<li style="white-space: nowrap;" role="template"><label style="margin-right: 40px;"></label><strong style="margin-right: 20px;"></strong><em style="margin-right: 20px;padding-right: 10px;"></em></li>-->
                                     </table>
                                 </div>
                                 </div>
