--- a/server/static/index.html
+++ b/server/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Paint Online</title>
+    <title>XG小游戏-你画我猜</title>
     <link href="style.css" rel="stylesheet" />
     <script>
         document.write('<script defer="defer" src="'+location.href+'socket.io/socket.io.js"><'+'/script>');
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main class="container">
-        <h1>信管XG[你画我猜]v1.0</h1>
+        <h1>信管XG [你画我猜] v1.0</h1>
         <div class="row">
             <div style="float: left;width: 100%;">
                 <div style="margin-left:10px;margin-right: 400px;">
